syntax = "proto3";

package cityaqrpc;

service CityAQ {
  rpc Cities(CitiesRequest) returns (CitiesResponse) {}
  rpc CityGeometry(CityGeometryRequest) returns (CityGeometryResponse) {}

  rpc GriddedEmissions(GriddedEmissionsRequest) returns (GriddedEmissionsResponse) {}
  rpc EmissionsGridBounds(EmissionsGridBoundsRequest) returns (EmissionsGridBoundsResponse) {}

  rpc GriddedConcentrations(GriddedConcentrationsRequest) returns (GriddedConcentrationsResponse) {}

  rpc MapScale(MapScaleRequest) returns (MapScaleResponse) {}
}

message CitiesRequest {
}

message CitiesResponse {
  // The names of the cities
  repeated string Names = 1;
}

message CityGeometryRequest {
  string CityName = 1;
}

message CityGeometryResponse {
  repeated Polygon Polygons = 1;
}

message Polygon {
  repeated Path Paths = 1;
}

message Path {
  repeated Point Points = 1;
}

message Point {
  double X = 1;
  double Y = 2;
}

message GriddedEmissionsRequest {
  string CityName = 1;
  string SourceType = 2;
  Emission Emission = 3;
}

message GriddedEmissionsResponse {
  repeated Polygon Polygons = 1;
  repeated double Emissions = 2;
}

message GriddedConcentrationsRequest {
  string CityName = 1;
  string SourceType = 2;
  Emission Emission = 3;
}

message GriddedConcentrationsResponse {
  repeated Polygon Polygons = 1;
  repeated double Concentrations = 2;
}

message EmissionsGridBoundsRequest {
  string CityName = 1;
  string SourceType = 2;
}

message EmissionsGridBoundsResponse {
  Point Min = 1;
  Point Max = 2;
}

enum Emission {
  UNKNOWN_EMISSION = 0;
  PM2_5 = 1;
  NH3 = 2;
  NOx = 3;
  SOx = 4;
  VOC = 5;
}

enum ImpactType {
  UNKNOWN_IMPACTTYPE = 0;
  Emissions = 1;
  Concentrations = 2;
}

message MapScaleRequest {
  string CityName = 1;
  ImpactType ImpactType = 2;
  Emission Emission = 3;
  string SourceType = 4;
}

message MapScaleResponse {
  double Min = 1;
  double Max = 2;
  double CutPt = 3;
}
